# GameProject

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: camera.cfg
data/scenes/: start_scene.xml
include/: Entities.h  cfgreader.h  core.h  entities.h  general.h  graphics.h  gui.h  pathfinding.h
src/: CMakeLists.txt  Entities.cpp  cfgReader.cpp  core.cpp  entities.cpp  general.cpp  graphics.cpp  gui.cpp  pathfinding.cpp
